@@ -79,6 +79,7 @@ version 0.6:
 - low overhead Ogg muxing
 - WebM support in Matroska demuxer
 - VP8 decoding via libvpx
+- CODEC_CAP_EXPERIMENTAL added
 
 
 
